# V.E.R.A.

./: .gitignore  AI.md  README.md  index.html  package-lock.json  package.json  qwen_voice.py  scaffold.sh  system_prompt.md  tailwind.config.js  tsconfig.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  models.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: boardroom.rs  daemon.rs  lib.rs  main.rs  models.rs  obsidian.rs  registry.rs  workspace.rs
src/lib/: formatter.ts  ipc.ts  orb.ts
src/styles/: main.css
src/types/: vera.ts
